src/objects/Change_requests__c/Change_requests__c.object-meta.xml
<CustomObject>
    <label>Change request</label>
    <nameField>
        <label>Form no</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>