src/objects/Change_requests__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <label>Assigned to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andy Mack</fullName>
            </value>
            <value>
                <fullName>Mark Alfer</fullName>
            </value>
            <value>
                <fullName>Lisa Pritchard</fullName>
            </value>
            <value>
                <fullName>Dan Knott</fullName>
            </value>
            <value>
                <fullName>Emma Evans</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>