src/objects/Change_requests__c/fields/Business_benefits__c.field-meta.xml
<CustomField>
    <fullName>Business_benefits__c</fullName>
    <inlineHelpText>What business benefits will this licence bring?</inlineHelpText>
    <label>Business benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>