src/objects/Change_requests__c/fields/Chargeable_change__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_change__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this change request now chargeable?</inlineHelpText>
    <label>Chargeable change?</label>
    <type>Checkbox</type>
</CustomField>