src/objects/Change_requests__c/fields/Client_contact__c.field-meta.xml
<CustomField>
    <fullName>Client_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Licence_sale_opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>