src/objects/Change_requests__c/fields/Client_lead__c.field-meta.xml
<CustomField>
    <fullName>Client_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Licence_sale_opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>