src/objects/Change_requests__c/fields/Existing_licence__c.field-meta.xml
<CustomField>
    <fullName>Existing_licence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Is this licence already built and available for purchase?</inlineHelpText>
    <label>Existing licence?</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Licence_sale_opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>