src/objects/Change_requests__c/fields/Form_description__c.field-meta.xml
<CustomField>
    <fullName>Form_description__c</fullName>
    <inlineHelpText>What is the form description?</inlineHelpText>
    <label>Summary</label>
    <length>200</length>
    <type>Text</type>
</CustomField>