src/objects/Change_requests__c/fields/Functional_area__c.field-meta.xml
<CustomField>
    <fullName>Functional_area__c</fullName>
    <label>Functional area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill Calculation</fullName>
            </value>
            <value>
                <fullName>BPM</fullName>
            </value>
            <value>
                <fullName>Budgets</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>CCBC</fullName>
            </value>
            <value>
                <fullName>Charges and Tariffs</fullName>
            </value>
            <value>
                <fullName>Consolidated Billing</fullName>
            </value>
            <value>
                <fullName>Contact Management</fullName>
            </value>
            <value>
                <fullName>Customer Licence File</fullName>
            </value>
            <value>
                <fullName>Customer Management</fullName>
            </value>
            <value>
                <fullName>Debt Recovery</fullName>
            </value>
            <value>
                <fullName>EB01 / BL78</fullName>
            </value>
            <value>
                <fullName>Financial Reporting</fullName>
            </value>
            <value>
                <fullName>Market Messages</fullName>
            </value>
            <value>
                <fullName>Market Works</fullName>
            </value>
            <value>
                <fullName>Metering</fullName>
            </value>
            <value>
                <fullName>Payment Plans</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>System Administration</fullName>
            </value>
            <value>
                <fullName>Trade Effluent</fullName>
            </value>
            <value>
                <fullName>Web Self Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>