src/objects/Change_requests__c/fields/Licence_descriptive_name__c.field-meta.xml
<CustomField>
    <fullName>Licence_descriptive_name__c</fullName>
    <inlineHelpText>Full descriptive name for the licence</inlineHelpText>
    <label>Licence descriptive name</label>
    <type>TextArea</type>
</CustomField>