src/objects/Change_requests__c/fields/Licence_name__c.field-meta.xml
<CustomField>
    <fullName>Licence_name__c</fullName>
    <inlineHelpText>What is the development name for this licence?</inlineHelpText>
    <label>Licence name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>