src/objects/Change_requests__c/fields/Licence_sold__c.field-meta.xml
<CustomField>
    <fullName>Licence_sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licence sold?</label>
    <type>Checkbox</type>
</CustomField>