src/objects/Change_requests__c/fields/Licence_sold_date__c.field-meta.xml
<CustomField>
    <fullName>Licence_sold_date__c</fullName>
    <label>Licence sold date</label>
    <type>Date</type>
</CustomField>