src/objects/Change_requests__c/fields/Licence_sold_on__c.field-meta.xml
<CustomField>
    <fullName>Licence_sold_on__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licence - sold on</label>
    <type>Checkbox</type>
</CustomField>