src/objects/Change_requests__c/fields/LRF_approved_date__c.field-meta.xml
<CustomField>
    <fullName>LRF_approved_date__c</fullName>
    <label>LRF approved date</label>
    <type>Date</type>
</CustomField>