src/objects/Change_requests__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>