src/objects/Change_requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_name__c</columns>
    <columns>Customer_reference__c</columns>
    <columns>Form_description__c</columns>
    <columns>Form_status__c</columns>
    <columns>Received_start_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>